--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,7 +15,7 @@
     <ImageView
         android:id="@+id/profile"
         android:layout_width="96dp"
-        android:layout_height="99dp"
+        android:layout_height="90dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/profile_avatar_foreground" />
@@ -24,6 +24,8 @@
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="18sp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/username"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
