--- a/app/src/main/res/layout/fragment_organization.xml
+++ b/app/src/main/res/layout/fragment_organization.xml
@@ -23,6 +23,12 @@
         android:layout_marginVertical="16dp"
         android:text="Rejoindre une organisation via le code" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="64dp"
+        android:background="?android:attr/listDivider" />
+
     <TextView
         android:id="@+id/titleOrg"
         android:layout_width="match_parent"
