--- a/app/src/main/res/layout/row_org_recyview.xml
+++ b/app/src/main/res/layout/row_org_recyview.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="20dp"
         app:cardBackgroundColor="@color/gray_light">
 
         <LinearLayout
@@ -69,18 +69,25 @@
                     android:layout_marginStart="10dp"
                     android:orientation="horizontal">
                     <TextView
-
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:text="author:"
+                        />
+                    <TextView
+                        android:id="@+id/orgAuthor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
-                        android:text="author:"
+                        android:text="Unknown"
                         />
                     <TextView
                         android:id="@+id/orgSubTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
-                        android:text="create by :"
+                        android:textStyle="italic"
+                        android:text="--"
                         android:textAlignment="textEnd" />
 
                 </LinearLayout>
